changes after assignment 4

--- a/Lecture 10/lecture_10a - Text Data.ipynb
+++ b/Lecture 10/lecture_10a - Text Data.ipynb
@@ -125,6 +125,7 @@
     {
      "data": {
       "text/plain": [
+       "category\n",
        "amendment                       1529\n",
        "house bill                       902\n",
        "senate bill                      514\n",
@@ -134,7 +135,7 @@
        "house concurrent resolution       20\n",
        "senate concurrent resolution      14\n",
        "senate joint resolution            8\n",
-       "Name: category, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 4,
@@ -163,9 +164,10 @@
     {
      "data": {
       "text/plain": [
+       "category\n",
        "house bill     902\n",
        "senate bill    514\n",
-       "Name: category, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 5,
@@ -194,7 +196,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "Data manipulation with sentences"
+    "Data manipulation with sentences: calculate means, replace names"
    ]
   },
   {
@@ -211,6 +213,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "# How many bills mention the word Senator?\n",
     "bool_contains = bills[\"action\"].str.contains(\"Senator\")\n",
     "print(bool_contains.mean())"
@@ -483,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,9 +719,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:4: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_21424\\754298073.py:4: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  amendments[\"action\"].str.findall(\"Amdt\\.....\\D\")\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -735,7 +749,7 @@
        "Name: action, Length: 1529, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,9 +775,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:8: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:8: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_21424\\1325440263.py:2: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  example1 = amendments[\"action\"].str.findall(\"Amdt\\.\\d\")\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_21424\\1325440263.py:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  example2 = amendments[\"action\"].str.findall(\".Amdt\\.\")\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_21424\\1325440263.py:8: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  example3 = amendments[\"action\"].str.findall(\".\\.Amdt\\....\")\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -827,13 +859,13 @@
    ],
    "source": [
     "# Get digits after string\n",
-    "example1 = amendments[\"action\"].str.findall(\"Amdt\\..\")\n",
+    "example1 = amendments[\"action\"].str.findall(\"Amdt\\.\\d\")\n",
     "\n",
     "# Get any character before string\n",
     "example2 = amendments[\"action\"].str.findall(\".Amdt\\.\")\n",
     "\n",
     "# Get two characters before string\n",
-    "example3 = amendments[\"action\"].str.findall(\"..Amdt\\....\")\n",
+    "example3 = amendments[\"action\"].str.findall(\".\\.Amdt\\....\")\n",
     "\n",
     "display(example1)\n",
     "display(example2)\n",
@@ -854,9 +886,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_21424\\3351810081.py:1: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "  amendments[\"action\"].str.findall(\".*Amdt\\S*\")\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -874,7 +916,7 @@
        "Name: action, Length: 1529, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,9 +927,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_21424\\757941281.py:2: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  example4 = amendments[\"action\"].str.findall(\"Amdt\\.\\d*\")\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_21424\\757941281.py:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  example5 = amendments[\"action\"].str.findall(\".*Amdt\\.\")\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1007,7 +1063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
