--- a/Lecture 10/Assignment_4_Zeyuan.ipynb
+++ b/Lecture 10/Assignment_4_Zeyuan.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "<font size = \"5\">\n",
     "\n",
-    "How many bills are there? What proportion of the bills belong to each category? What proportion of the bills belong to\n",
-    "different types of actions within each category?"
+    "How many bills are there? What proportion of the observations belong to each category? What proportion of the observations belong to\n",
+    "different types of main actions within each category?"
    ]
   },
   {
@@ -56,47 +56,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3303\n"
+      "1331\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "category                    \n",
-       "amendment                       0.462913\n",
-       "house bill                      0.273085\n",
-       "senate bill                     0.155616\n",
-       "house resolution                0.070845\n",
-       "senate resolution               0.018165\n",
-       "house joint resolution          0.006661\n",
-       "house concurrent resolution     0.006055\n",
-       "senate concurrent resolution    0.004239\n",
-       "senate joint resolution         0.002422\n",
+       "amendment                       1.148760\n",
+       "house bill                      0.677686\n",
+       "senate bill                     0.386176\n",
+       "house resolution                0.175808\n",
+       "senate resolution               0.045079\n",
+       "house joint resolution          0.016529\n",
+       "house concurrent resolution     0.015026\n",
+       "senate concurrent resolution    0.010518\n",
+       "senate joint resolution         0.006011\n",
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Num_bills = len(bills_actions)\n",
-    "print(Num_bills)  #there are 3303 bills in total\n",
+    "#find \n",
     "\n",
-    "# find number of bills by bill category\n",
+    "Num_bills = len(bills_actions.bill_number.unique())\n",
+    "print(Num_bills)  #there are 1331 independent bills in total\n",
+    "\n",
+    "\n",
+    "\n",
+    "# find number of observations(actions) by category\n",
     "\n",
     "Num_bills_cate = bills_actions.value_counts(subset=['category'])\n",
     "\n",
     "\n",
-    "#calculate proportion of bills by category\n",
+    "#calculate proportion of observations by category\n",
     "\n",
     "Num_bills_cate/Num_bills\n",
     "\n",
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +202,8 @@
      "output_type": "stream",
      "text": [
       "116\n",
-      "0.6896551724137931\n"
+      "0.6896551724137931\n",
+      "0.15517241379310345\n"
      ]
     }
    ],
@@ -219,7 +224,15 @@
     "bool_contains = senate_bills_floor[\"action\"].str.contains(\"suspend\")\n",
     "print(bool_contains.mean())\n",
     "\n",
-    "#69% of the house floor actions were suspended. \n"
+    "#69% of the house floor actions were suspended. \n",
+    "\n",
+    "\n",
+    "\n",
+    "bool_contains_2 = senate_bills_floor['action'].str.contains(r'^(?=.*suspend)(?=.*amended)')\n",
+    "\n",
+    "print(bool_contains_2.mean())\n",
+    "\n",
+    "# 16% of the house floor actions were suspended, as amended. \n"
    ]
   },
   {
@@ -233,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_20700\\1806427442.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_20364\\1806427442.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -259,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -631,14 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_20700\\806935907.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_20364\\2023818980.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -956,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
