--- a/Lecture 12/Lecture 12a - Analyzing Experimental Data.ipynb
+++ b/Lecture 12/Lecture 12a - Analyzing Experimental Data.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "2634"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "Treatment   2614"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -546,12 +546,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OLS Regression Results for primary_resp_fem:\n",
+      "\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.000\n",
+      "Model:                            OLS   Adj. R-squared:                  0.000\n",
+      "Method:                 Least Squares   F-statistic:                     1.641\n",
+      "Date:                 周四, 10 10月 2024   Prob (F-statistic):              0.200\n",
+      "Time:                        10:15:39   Log-Likelihood:                -2942.3\n",
+      "No. Observations:                5268   AIC:                             5889.\n",
+      "Df Residuals:                    5266   BIC:                             5902.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================\n",
+      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "Intercept          0.7739      0.008     94.242      0.000       0.758       0.790\n",
+      "x[T.Treatment]    -0.0149      0.012     -1.281      0.200      -0.038       0.008\n",
+      "==============================================================================\n",
+      "Omnibus:                      931.824   Durbin-Watson:                   1.948\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1429.848\n",
+      "Skew:                          -1.259   Prob(JB):                    3.25e-311\n",
+      "Kurtosis:                       2.588   Cond. No.                         2.61\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "OLS Regression Results for age_par1:\n",
+      "\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.000\n",
+      "Model:                            OLS   Adj. R-squared:                  0.000\n",
+      "Method:                 Least Squares   F-statistic:                     1.080\n",
+      "Date:                 周四, 10 10月 2024   Prob (F-statistic):              0.299\n",
+      "Time:                        10:15:39   Log-Likelihood:                -18351.\n",
+      "No. Observations:                4812   AIC:                         3.671e+04\n",
+      "Df Residuals:                    4810   BIC:                         3.672e+04\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================\n",
+      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "Intercept         40.6455      0.223    182.312      0.000      40.208      41.083\n",
+      "x[T.Treatment]     0.3286      0.316      1.039      0.299      -0.291       0.949\n",
+      "==============================================================================\n",
+      "Omnibus:                      592.243   Durbin-Watson:                   1.985\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              964.237\n",
+      "Skew:                           0.854   Prob(JB):                    4.15e-210\n",
+      "Kurtosis:                       4.377   Cond. No.                         2.61\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "OLS Regression Results for farmer:\n",
+      "\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.000\n",
+      "Model:                            OLS   Adj. R-squared:                 -0.000\n",
+      "Method:                 Least Squares   F-statistic:                    0.1284\n",
+      "Date:                 周四, 10 10月 2024   Prob (F-statistic):              0.720\n",
+      "Time:                        10:15:39   Log-Likelihood:                -3759.8\n",
+      "No. Observations:                5200   AIC:                             7524.\n",
+      "Df Residuals:                    5198   BIC:                             7537.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================\n",
+      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "Intercept          0.4655      0.010     47.707      0.000       0.446       0.485\n",
+      "x[T.Treatment]    -0.0050      0.014     -0.358      0.720      -0.032       0.022\n",
+      "==============================================================================\n",
+      "Omnibus:                    18305.927   Durbin-Watson:                   1.612\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              866.686\n",
+      "Skew:                           0.148   Prob(JB):                    6.33e-189\n",
+      "Kurtosis:                       1.022   Cond. No.                         2.61\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "\n",
+      "==================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code\n",
-    "\n",
     "\n"
    ]
   },
@@ -572,11 +667,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===================================\n",
+      "                   primary_resp_fem\n",
+      "-----------------------------------\n",
+      "Intercept          0.7739***       \n",
+      "                   (0.0081)        \n",
+      "treat[T.Treatment] -0.0149         \n",
+      "                   (0.0117)        \n",
+      "R-squared          0.0003          \n",
+      "R-squared Adj.     0.0001          \n",
+      "===================================\n",
+      "Standard errors in parentheses.\n",
+      "* p<.1, ** p<.05, ***p<.01\n",
+      "\n",
+      "=============================\n",
+      "                    age_par1 \n",
+      "-----------------------------\n",
+      "Intercept          40.6455***\n",
+      "                   (0.2163)  \n",
+      "treat[T.Treatment] 0.3286    \n",
+      "                   (0.3163)  \n",
+      "R-squared          0.0002    \n",
+      "R-squared Adj.     0.0000    \n",
+      "=============================\n",
+      "Standard errors in\n",
+      "parentheses.\n",
+      "* p<.1, ** p<.05, ***p<.01\n",
+      "\n",
+      "============================\n",
+      "                     farmer \n",
+      "----------------------------\n",
+      "Intercept          0.4655***\n",
+      "                   (0.0098) \n",
+      "treat[T.Treatment] -0.0050  \n",
+      "                   (0.0138) \n",
+      "R-squared          0.0000   \n",
+      "R-squared Adj.     -0.0002  \n",
+      "============================\n",
+      "Standard errors in\n",
+      "parentheses.\n",
+      "* p<.1, ** p<.05, ***p<.01\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "indep_vars = [\"primary_resp_fem\",\"age_par1\",\"farmer\"]\n",
+    "\n",
+    "\n",
+    "#models_list = [] if we use a list then try this way\n",
+    "\n",
+    "for var in indep_vars:\n",
+    "    \n",
+    "    # Define the formula for OLS\n",
+    "    formula = f'{var} ~ treat'\n",
+    "   \n",
+    "    \n",
+    "    # Fit the OLS model using smf.ols()\n",
+    "    model = smf.ols(formula, data=dataset).fit(cov_type= \"HC1\")\n",
+    "\n",
+    "    # models_list.append(model)\n",
+    "    \n",
+    "    # Print the summary of results\n",
+    "    #print(f\"OLS Regression Results for {var}:\\n\")\n",
+    "    # display(model.summary())\n",
+    "    print(summary_col(model,\n",
+    "                  stars = True))\n",
+    "  \n",
     "\n",
     "\n"
    ]
@@ -602,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
