--- a/Lecture 12/Lecture 12b - Random Assignment.ipynb
+++ b/Lecture 12/Lecture 12b - Random Assignment.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "      <td>3504</td>\n",
        "      <td>12.0</td>\n",
        "      <td>C-1689780</td>\n",
-       "      <td>Treatment</td>\n",
+       "      <td>Control</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -136,7 +136,7 @@
        "      <td>3693</td>\n",
        "      <td>11.5</td>\n",
        "      <td>B-1689791</td>\n",
-       "      <td>Control</td>\n",
+       "      <td>Treatment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -158,7 +158,7 @@
        "      <td>3433</td>\n",
        "      <td>12.0</td>\n",
        "      <td>A-1689813</td>\n",
-       "      <td>Treatment</td>\n",
+       "      <td>Control</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -169,7 +169,7 @@
        "      <td>3449</td>\n",
        "      <td>10.5</td>\n",
        "      <td>F-1689824</td>\n",
-       "      <td>Control</td>\n",
+       "      <td>Treatment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -202,7 +202,7 @@
        "      <td>2130</td>\n",
        "      <td>24.6</td>\n",
        "      <td>V-1694114</td>\n",
-       "      <td>Treatment</td>\n",
+       "      <td>Control</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>395</th>\n",
@@ -213,7 +213,7 @@
        "      <td>2295</td>\n",
        "      <td>11.6</td>\n",
        "      <td>D-1694125</td>\n",
-       "      <td>Control</td>\n",
+       "      <td>Treatment</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>396</th>\n",
@@ -235,7 +235,7 @@
        "      <td>2720</td>\n",
        "      <td>19.4</td>\n",
        "      <td>C-1694147</td>\n",
-       "      <td>Control</td>\n",
+       "      <td>Treatment</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -257,17 +257,17 @@
        "397  31.0          4           119         82    2720          19.4   \n",
        "\n",
        "    vehicle_id     status  \n",
-       "0    C-1689780  Treatment  \n",
-       "1    B-1689791    Control  \n",
+       "0    C-1689780    Control  \n",
+       "1    B-1689791  Treatment  \n",
        "2    P-1689802    Control  \n",
-       "3    A-1689813  Treatment  \n",
-       "4    F-1689824    Control  \n",
+       "3    A-1689813    Control  \n",
+       "4    F-1689824  Treatment  \n",
        "..         ...        ...  \n",
        "393  F-1694103  Treatment  \n",
-       "394  V-1694114  Treatment  \n",
-       "395  D-1694125    Control  \n",
+       "394  V-1694114    Control  \n",
+       "395  D-1694125  Treatment  \n",
        "396  F-1694136    Control  \n",
-       "397  C-1694147    Control  \n",
+       "397  C-1694147  Treatment  \n",
        "\n",
        "[398 rows x 8 columns]"
       ]
@@ -281,6 +281,8 @@
     "# We will save this to a column in \"carfeatures\"\n",
     "# Note: (i) We can always split the arguments of a function in multiple lines\n",
     "#           to make it easier to read\n",
+    "\n",
+    "np.random.seed(100)\n",
     "\n",
     "carfeatures[\"status\"] = np.random.choice(list_status,\n",
     "                                         size = size_dataset,\n",
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -335,11 +337,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Control</th>\n",
-       "      <td>251</td>\n",
+       "      <td>233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Treatment</th>\n",
-       "      <td>147</td>\n",
+       "      <td>165</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -348,8 +350,8 @@
       "text/plain": [
        "col_0      Frequency\n",
        "status              \n",
-       "Control          251\n",
-       "Treatment        147"
+       "Control          233\n",
+       "Treatment        165"
       ]
      },
      "metadata": {},
@@ -386,11 +388,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Control</th>\n",
-       "      <td>0.630653</td>\n",
+       "      <td>0.585427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Treatment</th>\n",
-       "      <td>0.369347</td>\n",
+       "      <td>0.414573</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -399,8 +401,8 @@
       "text/plain": [
        "col_0      Frequency\n",
        "status              \n",
-       "Control     0.630653\n",
-       "Treatment   0.369347"
+       "Control     0.585427\n",
+       "Treatment   0.414573"
       ]
      },
      "metadata": {},
@@ -435,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -496,67 +498,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>145.000000</td>\n",
-       "      <td>145.000000</td>\n",
-       "      <td>145.000000</td>\n",
-       "      <td>145.000000</td>\n",
-       "      <td>145.000000</td>\n",
+       "      <td>165.000000</td>\n",
+       "      <td>165.000000</td>\n",
+       "      <td>165.000000</td>\n",
+       "      <td>165.000000</td>\n",
+       "      <td>165.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>23.656552</td>\n",
-       "      <td>5.558621</td>\n",
-       "      <td>194.965517</td>\n",
-       "      <td>2999.124138</td>\n",
-       "      <td>15.622069</td>\n",
+       "      <td>24.200606</td>\n",
+       "      <td>5.303030</td>\n",
+       "      <td>185.672727</td>\n",
+       "      <td>2900.757576</td>\n",
+       "      <td>15.568485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>8.487383</td>\n",
-       "      <td>1.735559</td>\n",
-       "      <td>103.989477</td>\n",
-       "      <td>862.268865</td>\n",
-       "      <td>2.806626</td>\n",
+       "      <td>8.236530</td>\n",
+       "      <td>1.737058</td>\n",
+       "      <td>107.453970</td>\n",
+       "      <td>867.446527</td>\n",
+       "      <td>2.874972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>68.000000</td>\n",
-       "      <td>1760.000000</td>\n",
-       "      <td>9.500000</td>\n",
+       "      <td>1613.000000</td>\n",
+       "      <td>8.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>17.000000</td>\n",
+       "      <td>16.900000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>98.000000</td>\n",
-       "      <td>2200.000000</td>\n",
-       "      <td>13.900000</td>\n",
+       "      <td>2205.000000</td>\n",
+       "      <td>13.600000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>22.000000</td>\n",
+       "      <td>25.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>144.000000</td>\n",
-       "      <td>2910.000000</td>\n",
-       "      <td>15.000000</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>2615.000000</td>\n",
+       "      <td>15.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>29.900000</td>\n",
+       "      <td>30.000000</td>\n",
        "      <td>8.000000</td>\n",
-       "      <td>302.000000</td>\n",
-       "      <td>3672.000000</td>\n",
+       "      <td>260.000000</td>\n",
+       "      <td>3605.000000</td>\n",
        "      <td>17.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>46.600000</td>\n",
+       "      <td>44.600000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>455.000000</td>\n",
        "      <td>5140.000000</td>\n",
-       "      <td>24.600000</td>\n",
+       "      <td>24.800000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -564,14 +566,14 @@
       ],
       "text/plain": [
        "              mpg   cylinders  displacement       weight  acceleration\n",
-       "count  145.000000  145.000000    145.000000   145.000000    145.000000\n",
-       "mean    23.656552    5.558621    194.965517  2999.124138     15.622069\n",
-       "std      8.487383    1.735559    103.989477   862.268865      2.806626\n",
-       "min      9.000000    4.000000     68.000000  1760.000000      9.500000\n",
-       "25%     17.000000    4.000000     98.000000  2200.000000     13.900000\n",
-       "50%     22.000000    4.000000    144.000000  2910.000000     15.000000\n",
-       "75%     29.900000    8.000000    302.000000  3672.000000     17.300000\n",
-       "max     46.600000    8.000000    455.000000  5140.000000     24.600000"
+       "count  165.000000  165.000000    165.000000   165.000000    165.000000\n",
+       "mean    24.200606    5.303030    185.672727  2900.757576     15.568485\n",
+       "std      8.236530    1.737058    107.453970   867.446527      2.874972\n",
+       "min     10.000000    3.000000     68.000000  1613.000000      8.000000\n",
+       "25%     16.900000    4.000000     98.000000  2205.000000     13.600000\n",
+       "50%     25.000000    4.000000    135.000000  2615.000000     15.400000\n",
+       "75%     30.000000    8.000000    260.000000  3605.000000     17.300000\n",
+       "max     44.600000    8.000000    455.000000  5140.000000     24.800000"
       ]
      },
      "metadata": {},
@@ -608,67 +610,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>253.000000</td>\n",
-       "      <td>253.000000</td>\n",
-       "      <td>253.000000</td>\n",
-       "      <td>253.000000</td>\n",
-       "      <td>253.000000</td>\n",
+       "      <td>233.000000</td>\n",
+       "      <td>233.000000</td>\n",
+       "      <td>233.000000</td>\n",
+       "      <td>233.000000</td>\n",
+       "      <td>233.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>23.433202</td>\n",
-       "      <td>5.395257</td>\n",
-       "      <td>192.545455</td>\n",
-       "      <td>2953.976285</td>\n",
-       "      <td>15.537154</td>\n",
+       "      <td>23.028755</td>\n",
+       "      <td>5.562232</td>\n",
+       "      <td>198.918455</td>\n",
+       "      <td>3019.759657</td>\n",
+       "      <td>15.567811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>7.420168</td>\n",
-       "      <td>1.681451</td>\n",
-       "      <td>104.624019</td>\n",
-       "      <td>839.151120</td>\n",
-       "      <td>2.734372</td>\n",
+       "      <td>7.483919</td>\n",
+       "      <td>1.670417</td>\n",
+       "      <td>101.828487</td>\n",
+       "      <td>830.280973</td>\n",
+       "      <td>2.677805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>10.000000</td>\n",
+       "      <td>9.000000</td>\n",
        "      <td>3.000000</td>\n",
-       "      <td>70.000000</td>\n",
-       "      <td>1613.000000</td>\n",
-       "      <td>8.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>1649.000000</td>\n",
+       "      <td>8.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>17.500000</td>\n",
+       "      <td>17.600000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>105.000000</td>\n",
-       "      <td>2245.000000</td>\n",
-       "      <td>13.800000</td>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>2230.000000</td>\n",
+       "      <td>14.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>151.000000</td>\n",
-       "      <td>2735.000000</td>\n",
+       "      <td>21.500000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>163.000000</td>\n",
+       "      <td>2930.000000</td>\n",
        "      <td>15.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>28.800000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>258.000000</td>\n",
-       "      <td>3563.000000</td>\n",
-       "      <td>17.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>302.000000</td>\n",
+       "      <td>3630.000000</td>\n",
+       "      <td>17.100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>44.600000</td>\n",
+       "      <td>46.600000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>455.000000</td>\n",
-       "      <td>4997.000000</td>\n",
-       "      <td>24.800000</td>\n",
+       "      <td>4955.000000</td>\n",
+       "      <td>24.600000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -676,14 +678,14 @@
       ],
       "text/plain": [
        "              mpg   cylinders  displacement       weight  acceleration\n",
-       "count  253.000000  253.000000    253.000000   253.000000    253.000000\n",
-       "mean    23.433202    5.395257    192.545455  2953.976285     15.537154\n",
-       "std      7.420168    1.681451    104.624019   839.151120      2.734372\n",
-       "min     10.000000    3.000000     70.000000  1613.000000      8.000000\n",
-       "25%     17.500000    4.000000    105.000000  2245.000000     13.800000\n",
-       "50%     23.000000    4.000000    151.000000  2735.000000     15.500000\n",
-       "75%     28.800000    6.000000    258.000000  3563.000000     17.000000\n",
-       "max     44.600000    8.000000    455.000000  4997.000000     24.800000"
+       "count  233.000000  233.000000    233.000000   233.000000    233.000000\n",
+       "mean    23.028755    5.562232    198.918455  3019.759657     15.567811\n",
+       "std      7.483919    1.670417    101.828487   830.280973      2.677805\n",
+       "min      9.000000    3.000000     71.000000  1649.000000      8.500000\n",
+       "25%     17.600000    4.000000    107.000000  2230.000000     14.000000\n",
+       "50%     21.500000    6.000000    163.000000  2930.000000     15.500000\n",
+       "75%     28.000000    8.000000    302.000000  3630.000000     17.100000\n",
+       "max     46.600000    8.000000    455.000000  4955.000000     24.600000"
       ]
      },
      "metadata": {},
@@ -817,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
