--- a/Lecture 13/Lecture 13a - Logistic Regression for Classification.ipynb
+++ b/Lecture 13/Lecture 13a - Logistic Regression for Classification.ipynb
@@ -136,12 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "y, X = \\\n",
-    "    patsy.dmatrices('request_loan ~ 1',\n",
+    "    patsy.dmatrices('request_loan ~ 1 + received_info + owns_house',\n",
     "                       dataset)\n",
     "y = np.ravel(y)"
    ]
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
